Kates changes added.

--- a/gREM_ms_revisions.tex
+++ b/gREM_ms_revisions.tex
@@ -111,9 +111,9 @@ Acoustic detection, camera traps, marine, population monitoring, simulations, te
 
 Animal population density is one of the fundamental measures in ecology and conservation. The density of a population has important implications for a range of issues such as sensitivity to stochastic fluctuations \citep{richter1972extinction, wright1983stochastic} and risk of extinction \citep{purvis2000predicting}. Monitoring animal population changes in response to anthropogenic pressure is becoming increasingly important as humans rapidly modify habitats and change climates \citep{everatt2014trophic}. Sensor technology, such as camera traps \citep{karanth1995estimating, rowcliffe2008surveys} and acoustic detectors \citep{clark1995application, acevedo2006using, walters2012continental} are becoming widely used to monitor changes in animal populations \citep{rowcliffe2008surveys, kessel2014review, walters2013challenges}, as they are efficient, relativity cheap and non-invasive \citep{cutler1999using}, allowing for surveys over large areas and long periods. However, converting sampled count data into estimates of density is problematic as detectability of animals needs to be accounted for \citep{anderson2001need}.
 
-Additional information must often be collected simultaneously to animal counts for existing methods for estimating density but this information is often unavailable. For example, capture-mark-recapture methods \citep{karanth1995estimating, trolle2007camera, borchers2014continuous} require recognition of individuals, and distance methods \citep{harris2013applying} require estimates of how far away individuals are from the sensor \citep{barlow2005estimates, marques2011estimating}. When individuals cannot be told apart, occupancy modelling can be used to estimate absolute abundance \citep{royle2003estimating}. However, as the model is originally formulated for occupancy, information is thrown away. Assumptions about the distribution of individuals (e.g. a poisson distribution) must also be made \citep{royle2003estimating} which may be a poor assumption for nonrandomly distributed species. Furthermore repeat, independant surveys must be performed and the definition of a site can be difficult, especially for wide-ranging species \citep{mackenzie2005designing}.
+Additional information must often be collected simultaneously to animal counts for existing methods for estimating density but this information is often unavailable. For example, capture-mark-recapture methods \citep{karanth1995estimating, trolle2007camera, borchers2014continuous} require recognition of individuals, and distance methods \citep{harris2013applying} require estimates of how far away individuals are from the sensor \citep{barlow2005estimates, marques2011estimating}. When individuals cannot be told apart, an extension of occupancy modelling can be used to estimate absolute abundance \citep{royle2003estimating}. However, as the model is originally formulated for occupancy, information is thrown away. Assumptions about the distribution of individuals (e.g. a poisson distribution) must also be made \citep{royle2003estimating} which may be a poor assumption for nonrandomly distributed species. Furthermore repeat, independant surveys must be performed and the definition of a site can be difficult, especially for wide-ranging species \citep{mackenzie2005designing}.
 
-More recently, the development of the random encounter model (REM), a modification of an ideal gas model \citep{Hutchinson_Waser_2007}, has enabled animal densities to be estimated from unmarked individuals of a known speed, and with known sensor detection parameters \citep{rowcliffe2008estimating}. The REM method has been successfully applied to estimate animal densities from camera trap surveys \citep{manzo2012estimation, zero2013monitoring}. However, extending the REM method to other types of sensors (e.g., acoustic detectors) is more problematic, because the original derivation assumes a relatively narrow sensor width (up to $\pi/2$ radians) and that the animal is equally detectable irrespective of its heading \citep{rowcliffe2008estimating}. 
+More recently, the development of the random encounter model (REM), a modification of an ideal gas model \citep{yapp1956theory, Hutchinson_Waser_2007}, has enabled animal densities to be estimated from unmarked individuals of a known speed, and with known sensor detection parameters \citep{rowcliffe2008estimating}. The REM method has been successfully applied to estimate animal densities from camera trap surveys \citep{manzo2012estimation, zero2013monitoring}. However, extending the REM method to other types of sensors (e.g., acoustic detectors) is more problematic, because the original derivation assumes a relatively narrow sensor width (up to $\pi/2$ radians) and that the animal is equally detectable irrespective of its heading \citep{rowcliffe2008estimating}. 
 
 Whilst these restrictions are not problematic for most camera trap makes (e.g., Reconyx, Cuddeback), the REM cannot be used to estimate densities from camera traps with a wider sensor width (e.g. canopy monitoring with fish eye lenses, \citet{brusa2014increasing}). Additionally, the REM method is not useful in estimating densities from acoustic survey data as acoustic detector angles are often wider than $\pi/2$ radians.  Acoustic detectors are designed for a range of diverse tasks and environments \citep{kessel2014review}, which naturally leads to a wide range of sensor detection widths and detection distances. In addition to this, calls emitted by many animals are directional \citep{blumstein2011acoustic}, breaking the assumption of the REM method. 
 
@@ -199,7 +199,7 @@ gREM submodel specifications were done by hand, and the integration was done usi
 
 We tested the accuracy and precision of the gREM by developing a spatially explicit simulation of the interaction of sensors and animals using different combinations of sensor detection widths, animal signal widths, number of captures, and models of animal movement. One hundred simulations were run where each consisted of a  \SI{7.5}{\kilo\meter} by \SI{7.5}{\kilo\meter} square with periodic boundaries. A stationary sensor of radius $r$, \SI{10}{\meter}, was set up in the exact centre of each simulated study area, covering seven sensor detection widths $\theta$, between 0 and $2\pi$ ($2/9\pi$, $4/9\pi$, $6/9\pi$, $8/9\pi$, $10/9\pi$, $14/9\pi$, and $2\pi$). Each sensor was set to record continuously and to capture animal signals instantaneously from emission. Each simulation was populated with a density of \SI{70}{\animals\per\kilo\meter\squared}, calculated from the equation in \cite{damuth1981population} as the expected density of mammals weighing \SI{1}{\gram}. This density therefore represents a reasonable estimate of density of individuals, given that the smallest mammal is around \SI{2}{\gram} \citep{jones2009pantheria}. A total of 3937 individuals per simulation were created which were placed randomly at the start of the simulation. 11 signal widths $\alpha$ between 0 and $\pi$ were used ($1/11\pi$, $2/11\pi$, $3/11\pi$, $4/11\pi$, $5/11\pi$, $6/11\pi$, $7/11\pi$, $8/11\pi$, $9/11\pi$, $10/11\pi$, $\pi$). 
 
-Each simulation lasted for $N$ steps (14400) of duration $T$ (15 minutes) giving a total duration of 150 days. The individuals moved within each step with a distance $d$, with an average speed, $v$. The distance, $d$, was sampled from a normal distribution with mean distance, $\mu_d = vT$, and standard deviation, $\sigma_d = vT/10$, where the standard deviation was chosen to scale with the average distance travelled. An average speed, $v = $ \SI{40}{\kilo\meter \per \day}, was chosen as this is the largest day range of terrestrial animals \citep{carbone2005far}, and represents the upper limit of realistic speeds. At the end of each step, individuals were allowed to either remain stationary for a time step (with a given probability, $S$), or change direction (where the change in direction has a uniform distribution with a maximum angle, $A$) between 0 and $\pi$. This resulted in seven different movement models where: (1) simple movement, where $S$ and $A$ = 0; (2) stop-start movement, where (i) $S$ = 0.25, $A$ = 0, (ii) $S$ = 0.5, $A$ = 0, (iii) $S$ = 0.75, $A$ = 0; (3) correlated random walk movement, where (i) $S$ = 0, $A$ = $\pi/3$, (ii) $S$ = 0, $A$ = $2\pi/3$, iii) $S$ = 0, $A$ = $\pi$. Individuals were counted as they moved into the detection zone of the sensor per simulation. 
+Each simulation lasted for $N$ steps (14400) of duration $T$ (15 minutes) giving a total duration of 150 days. The individuals moved within each step with a distance $d$, with an average speed, $v$. The distance, $d$, was sampled from a normal distribution with mean distance, $\mu_d = vT$, and standard deviation, $\sigma_d = vT/10$, where the standard deviation was chosen to scale with the average distance travelled. An average speed, $v = $ \SI{40}{\kilo\meter \per \day}, was chosen as this is the largest day range of terrestrial animals \citep{carbone2005far}, and represents the upper limit of realistic speeds. At the end of each step, individuals were allowed to either remain stationary for a time step (with a given probability, $S$), or change direction where the change in direction has a uniform distribution in the interval $\left[-A, A\right]$. This resulted in seven different movement models where: (1) simple movement, where $S$ and $A$ = 0; (2) stop-start movement, where (i) $S$ = 0.25, $A$ = 0, (ii) $S$ = 0.5, $A$ = 0, (iii) $S$ = 0.75, $A$ = 0; (3) correlated random walk movement, where (i) $S$ = 0, $A$ = $\pi/3$, (ii) $S$ = 0, $A$ = $2\pi/3$, iii) $S$ = 0, $A$ = $\pi$. Individuals were counted as they moved into the detection zone of the sensor per simulation. 
 
 We calculated the estimated animal density from the gREM by summing the number of captures per simulation and inputting these values into the correct gREM submodel. The accuracy of the gREM was determined by comparing the true simulation density with the estimated density. gREM precision was determined by the standard deviation of estimated densities. We used this method to compare the accuracy and precision of all the gREM submodels. As these submodels are derived for different combinations of $\alpha$ and $\theta$, the accuracy and precision of the submodels was used to determine the impact of different values of $\alpha$ and $\theta$. 
 
@@ -275,12 +275,12 @@ Within the four gREM submodels tested (NW1, SW1, SE3, NE1), neither the accuracy
 %%%% ------- Discussion ---------%%%%
 \section*{Discussion}
 
-We have developed the gREM such that it can be used to estimate density from acoustic sensors and camera traps. This has entailed a generalisation of the gas model and the REM in \citet{rowcliffe2008estimating} to be applicable to any combination of sensor width and signal directionality. We have used simulations to show, as a proof of principle, that these models are accurate and precise. The precision of the gREM was found to be dependent on the number of captures which in turn depends on the width of the sensor and the signal.
+We have developed the gREM such that it can be used to estimate density from acoustic sensors and camera traps. This has entailed a generalisation of the gas model and the REM in \citet{rowcliffe2008estimating} to be applicable to any combination of sensor width and signal directionality. We have used simulations to show, as a proof of principle, that these models are accurate and precise. We emphasise that the approach is robust to multiple detections of the same individual within a survey and does not require cases of multiple capture to be removed or recorded. The precision of the gREM was found to be dependent on the number of captures which in turn depends on the width of the sensor and the signal.
 
 \subsection*{Analytical model}
 The gREM was derived for different combinations of $\alpha$ and $\theta$ resulting in 25 different submodels, the expression for $\bar{p}$ are equal for many of these submodels resulting in eight different equations including the previously derived gas model and REM. These submodels were tested for consistency with adjacent expressions being equal at their boundaries. These new submodels will allow researchers to evaluate the absolute density of animals that have previously been difficult to study, such as echolocating bats \citep{clement2013estimating}, with non-invasive methods such as remote sensors. The gREM also allows the data from acoustic detectors to be used where an animal has a directional calls, this could be used for a range of animals including songbirds \citep{blumstein2011acoustic}, dolphins \citep{lammers2003directionality}, as well as echolocating bats \citep{walters2013challenges}. 
 
-There are a number of possible extensions to the gREM which could be developed in the future. The original gas model was formulated for the case where both subjects, either animal and detector, or animal and animal, are moving \citep{Hutchinson_Waser_2007}. Indeed any of the models with animals that are equally detectable in all directions ($\alpha = 2\pi$) can be trivially expanded for moving sensors by replacing $v$ as used here with the average animal speed added to the sensor speed. However, when the animal has a directional call, as seen in both terrestrial and aquatic environments \citep{lammers2003directionality,blumstein2011acoustic}, the extension becomes less simple. The approach would be to calculate again the mean profile width. However, for each angle of approach, one would have to average the profile width for an animal facing in any direction (i.e., not necessarily moving towards the sensor) weighted by the relative velocity of that direction. There are a number of situations where a moving detector and animal could occur, e.g. an acoustic detector towed from a boat when studying porpoises \citep{kimura2014acoustic} or surveying echolocating bats from a moving car \citep{ahlen1999use, jones2011indicator}. 
+There are a number of possible extensions to the gREM which could be developed in the future. The original gas model was formulated for the case where both subjects, either animal and sensor, or animal and animal, are moving \citep{Hutchinson_Waser_2007}. Indeed any of the models with animals that are equally detectable in all directions ($\alpha = 2\pi$) can be trivially expanded; simply replace animal speed $v$ with $v + v_s$ where $v_s$ is the speed of the sensor. However, when the animal has a directional call, as seen in both terrestrial and aquatic environments \citep{lammers2003directionality,blumstein2011acoustic}, the extension becomes less simple. The approach would be to calculate again the mean profile width. However, for each angle of approach, one would have to average the profile width for an animal facing in any direction (i.e., not necessarily moving towards the sensor) weighted by the relative velocity of that direction. There are a number of situations where a moving detector and animal could occur, e.g. an acoustic detector towed from a boat when studying porpoises \citep{kimura2014acoustic} or surveying echolocating bats from a moving car \citep{ahlen1999use, jones2011indicator}. 
 
 Interesting but unstudied problems impacting the gREM are firstly, edge effects caused by sensor trigger delays (the delay between sensing an animal and attempting to record the encounter) \citep{rovero2013camera}, and secondly, sensors which repeatedly turn on an off during sampling \citep{jones2011indicator}. The second problem is particularly relevant to acoustic detectors which record ultrasound by time expansion. Here ultrasound is recorded for a set time period and then slowed down and played back, rendering the sensor 'deaf' periodically during sampling. Both of these problems may cause biases in the gREM, as animals can move through the detection zone without being detected. As the gREM assumes constant surveillance, the error created by switching the sensor on and off quickly will become more important if the sensor is only on for short periods of time. For example, if it takes longer for the recording device to be switched on than the length of some animal calls, then there could be a systematic underestimation of density. We recommend that the gREM is applied to constantly sampled data, and the impacts of breaking these assumptions on the gREM should be further explored. 
 
@@ -293,7 +293,7 @@ The precision of the gREM is greatly affected by the number of captures. The coe
 
 The gREM was both accurate and precise for all the movement models we tested (stop-start movement and correlated random walks) though it is expected that nonlinear movement will increase variance \citep{Hutchinson_Waser_2007} and this might be evident given other simulation setups. Furthermore, these movement models are still simple representations of true animal movement which are dependent on multiple factors such as behavioural state and existence of home ranges \citep{smouse2010stochastic}. Further work should use animal movement data to test the validity of gREM beyond simple movement models. The precision of the gREM may be affected by the interaction between the movement model and the size of the detection radius. We have studied a relatively long step length compared to the size of the detection radius, and therefore the chance of catching the same animal multiple times within a short space of time was reduced and there is little effect on the precision of the model (Figure \ref{f:Tort}). However, if the ratio of step length to detection radius was smaller, then this may decrease the precision of the model (but should not decrease its accuracy). 
 
-In our simulations we have assumed perfect estimates of parameter values. While estimates will never be perfect, the gREM is predictably sensitive to inaccurate parameters estimates (Appendix S6). The measurement of parameters is taxon dependant although there are many commonalities. Estimates of $r$ can be measured directly or calculated using physical acoustic models (e.g. \citep{holderied2003echolocation}) while the sensor angle is often easily measured \citep{adams2012you}. Call directionality has been measured using arrays of microphones \citep{brinklov2011} though the measurements are rarely of $\alpha$ exactly. When estimating $v$ the measure used should be relevant to the timing of a survey; if a survey is continually running, then day range may be a good measures \citep{carbone2005far} whereas if a survey is only conducted when a species is active (e.g. dawn-dusk bat surveys) then estimates of the actual speed of movement may be more appropriate. 
+In our simulations we have assumed perfect estimates of parameter values. While estimates will never be perfect, the gREM is predictably sensitive to inaccurate parameters estimates (Appendix S6). The measurement of parameters is taxon dependant although there are many commonalities. Estimates of $r$ can be measured directly or calculated using physical acoustic models (e.g. \citep{holderied2003echolocation}) while the sensor angle is often easily measured \citep{adams2012you}. Call directionality has been measured using arrays of microphones \citep{brinklov2011} though the measurements are rarely of $\alpha$ exactly. When estimating $v$ the measure used should be relevant to the timing of a survey; if a survey is continually running, then day range may be a good measures \citep{carbone2005far} whereas if a survey is only conducted when a species is active (e.g. dawn-dusk bat surveys) then estimates of the speed of movement only during the survey period may be more appropriate. 
 
 \subsection*{Limitations}
 Although we have used simulations to validate the gREM submodels, much more robust testing is needed. Although difficult, proper field test validation would be required before the models could be fully trusted.  The REM \citep{rowcliffe2008estimating} has already been field tested, and both \citet{rowcliffe2008estimating} and \citet{zero2013monitoring} both found that the REM was an effective manner of estimating animal densities \citep{rowcliffe2008estimating, zero2013monitoring}. In some taxa gold standard methods of estimating animal density exist, such as capture-mark-recapture \citep{sollmann2013using}. Where these gold standard exist or true numbers are known, a simultaneous gREM study could be completed to test the accuracy under field conditions, similar to the tests in \citet{rowcliffe2008estimating}. An easier way to continue to evaluate the models is to run more extensive simulations which break the assumptions of the analytical models. The main element that cannot be analytically treated is the complex movement of real animals. Therefore testing these methods against true animal traces, or more complex movement models would be required.
