Occupancy chapter improved

--- a/gREM_ms_revisions.tex
+++ b/gREM_ms_revisions.tex
@@ -26,7 +26,7 @@
 \rhead{}
 \chead{Lucas \emph{et al.} A generalised random encounter model for animals}
 \cfoot{\footnotesize{\thepage}}
-\pagestyle{fancy}    
+\pagestyle{fancy}
 
 \usepackage[nolists, nomarkers, tablesfirst]{endfloat}
 \linenumbers
@@ -111,7 +111,7 @@ Acoustic detection, camera traps, marine, population monitoring, simulations, te
 
 Animal population density is one of the fundamental measures in ecology and conservation. The density of a population has important implications for a range of issues such as sensitivity to stochastic fluctuations \citep{richter1972extinction, wright1983stochastic} and risk of extinction \citep{purvis2000predicting}. Monitoring animal population changes in response to anthropogenic pressure is becoming increasingly important as humans rapidly modify habitats and change climates \citep{everatt2014trophic}. Sensor technology, such as camera traps \citep{karanth1995estimating, rowcliffe2008surveys} and acoustic detectors \citep{clark1995application, acevedo2006using, walters2012continental} are becoming widely used to monitor changes in animal populations \citep{rowcliffe2008surveys, kessel2014review, walters2013challenges}, as they are efficient, relativity cheap and non-invasive \citep{cutler1999using}, allowing for surveys over large areas and long periods. However, converting sampled count data into estimates of density is problematic as detectability of animals needs to be accounted for \citep{anderson2001need}.
 
-Additional information must often be collected simultaneously to animal counts for existing methods for estimating density but this information is often unavailable. For example, capture-mark-recapture methods \citep{karanth1995estimating, trolle2007camera, borchers2014continuous} require recognition of individuals, and distance methods \citep{harris2013applying} require estimates of how far away individuals are from the sensor \citep{barlow2005estimates, marques2011estimating}. When individuals cannot be told apart, an extension of occupancy modelling can be used to estimate absolute abundance \citep{royle2003estimating}. However, as the model is originally formulated for occupancy, information is thrown away. Assumptions about the distribution of individuals (e.g. a poisson distribution) must also be made \citep{royle2003estimating} which may be a poor assumption for nonrandomly distributed species. Furthermore repeat, independant surveys must be performed and the definition of a site can be difficult, especially for wide-ranging species \citep{mackenzie2005designing}.
+Existing methods for estimating animal density often require additional information that is often unavailable. For example, capture-mark-recapture methods \citep{karanth1995estimating, trolle2007camera, borchers2014continuous} require recognition of individuals, and distance methods \citep{harris2013applying} require estimates of how far away individuals are from the sensor \citep{barlow2005estimates, marques2011estimating}. When individuals cannot be told apart, an extension of occupancy modelling can be used to estimate absolute abundance \citep{royle2003estimating}. However, as the model is originally formulated to estimate occupancy,  count information is simplified to presence--absence data. Assumptions about the distribution of individuals (e.g. a poisson distribution) must also be made \citep{royle2003estimating} which may be a poor assumption for nonrandomly distributed species. Furthermore repeat, independent surveys must be performed and the definition of a site can be difficult, especially for wide-ranging species \citep{mackenzie2005designing}.
 
 More recently, the development of the random encounter model (REM), a modification of an ideal gas model \citep{yapp1956theory, Hutchinson_Waser_2007}, has enabled animal densities to be estimated from unmarked individuals of a known speed, and with known sensor detection parameters \citep{rowcliffe2008estimating}. The REM method has been successfully applied to estimate animal densities from camera trap surveys \citep{manzo2012estimation, zero2013monitoring}. However, extending the REM method to other types of sensors (e.g., acoustic detectors) is more problematic, because the original derivation assumes a relatively narrow sensor width (up to $\pi/2$ radians) and that the animal is equally detectable irrespective of its heading \citep{rowcliffe2008estimating}. 
 
