--- a/lucas-moorcroft-etal-refs.bib
+++ b/lucas-moorcroft-etal-refs.bib
@@ -123,6 +123,18 @@
 	Volume = {2},
 	Year = {2000}}
 
+@article{marques2013estimating,
+  title={Estimating animal population density using passive acoustics},
+  author={Marques, Tiago A and Thomas, Len and Martin, Stephen W and Mellinger, David K and Ward, Jessica A and Moretti, David J and Harris, Danielle and Tyack, Peter L},
+  journal={Biological Reviews},
+  volume={88},
+  number={2},
+  pages={287--309},
+  year={2013},
+  publisher={Wiley Online Library}
+}
+
+
 @article{borchers2014continuous,
 	Author = {Borchers, David and Distiller, Greg and Foster, Rebecca and Harmsen, Bart and Milazzo, Lorenzo},
 	Date-Added = {2014-09-17 13:05:13 +0000},
